language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/mutate_with_borrowed_loc_struct_invalid.exp
error: 

   ┌── tests/move_check/translated_ir_tests/move/borrow_tests/mutate_with_borrowed_loc_struct_invalid.move:7:9 ───
   │
 7 │         x = X { b: true };
   │         ^ Invalid assignment to local 'x'
   ·
 5 │         let x = X { b: true };
   │             - The local contains a value due to this assignment. The value does not have the 'drop' ability and must be used before you assign to this local again
   │

error: 

   ┌── tests/move_check/translated_ir_tests/move/borrow_tests/mutate_with_borrowed_loc_struct_invalid.move:7:9 ───
   │
 7 │         x = X { b: true };
   │         ^ Invalid assignment of local 'x'
   ·
 6 │         let y = &x;
   │                 -- It is still being borrowed by this reference
   │

error: 

    ┌── tests/move_check/translated_ir_tests/move/borrow_tests/mutate_with_borrowed_loc_struct_invalid.move:16:9 ───
    │
 16 │         s = S { z: 7 };
    │         ^ Invalid assignment of local 's'
    ·
 15 │         let z = &y.z;
    │                 ---- It is still being borrowed by this reference
    │

